--- a/package.json
+++ b/package.json
@@ -33,17 +33,16 @@
     "build": "tsc && npm-run-all --parallel build:minify.*",
     "build:minify.browser": "uglifyjs dist/vaadin-router.js -c -m --mangle-props regex=/^__/ --toplevel --source-map --output dist/vaadin-router.min.js",
     "build:watch": "tsc -w",
-    "start": "npm run build && polyserve --port 8000",
-    "start:browser-sync": "browser-sync start --config bs-config.cjs",
-    "start:watch": "npm-run-all --parallel build:watch start start:browser-sync",
-    "test": "wct && npm run test:coverage && npm run test:typescript-declarations",
-    "test:coverage": "wct --profile=coverage",
-    "test:typescript-declarations": "tsc -p test/tsconfig.json --noEmit",
+    "start": "vite",
+    "test": "karma start karma.config.cjs",
+    "test:watch": "npm run test -- --watch",
+    "test:coverage": "npm run test -- --coverage",
     "size-control": "bundlesize",
     "docs": "npm run build && npm run docs:analyze && gulp -f gulpfile.cjs docs",
     "docs:analyze": "polymer analyze dist/vaadin-router.js src/documentation/*.js > analysis.json",
     "browserslist": "browserslist && browserslist --coverage",
     "prepare": "npm run build",
+    "validate": "tsc -p test/tsconfig.json --noEmit",
     "version": "gulp -f gulpfile.cjs version:update"
   },
   "bundlesize": [
@@ -67,6 +66,11 @@
   },
   "devDependencies": {
     "@types/form-data": "^2.5.0",
+    "@types/karma": "^6.3.4",
+    "@types/karma-chrome-launcher": "^3.1.1",
+    "@types/karma-mocha": "^1.3.1",
+    "@types/mocha": "^10.0.1",
+    "@types/sinon": "^10.0.15",
     "bower": "^1.8.12",
     "browser-sync": "^2.26.14",
     "browserslist": "^4.21.5",
@@ -78,12 +82,21 @@
     "gulp-cli": "^2.3.0",
     "gulp-git": "^2.10.1",
     "gulp-replace": "^1.0.0",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.0",
+    "karma-mocha": "^2.0.1",
+    "karma-vite": "^1.0.4",
+    "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
     "polymer-cli": "^1.9.11",
     "polyserve": "^0.27.15",
+    "puppeteer": "^20.5.0",
+    "sinon": "^2.4.1",
     "stylelint": "^13.12.0",
     "typescript": "^5.0.4",
     "uglify-es": "^3.3.9",
+    "vite": "^4.3.9",
     "wct-istanbul": "^0.14.3",
     "web-component-tester": "^6.9.2",
     "yargs": "^16.0.3"
