--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "path-to-regexp": "^6.2.0"
   },
   "devDependencies": {
+    "@esm-bundle/chai": "^4.3.4-fix.0",
+    "@types/chai-dom": "^1.11.0",
     "@types/form-data": "^2.5.0",
     "@types/karma": "^6.3.4",
     "@types/karma-chrome-launcher": "^3.1.1",
@@ -75,6 +77,7 @@
     "browser-sync": "^2.26.14",
     "browserslist": "^4.21.5",
     "bundlesize": "^0.18.1",
+    "chai-dom": "^1.11.0",
     "eslint": "^7.22.0",
     "eslint-plugin-html": "^6.1.2",
     "fs-extra": "^9.1.0",
@@ -92,7 +95,7 @@
     "polymer-cli": "^1.9.11",
     "polyserve": "^0.27.15",
     "puppeteer": "^20.5.0",
-    "sinon": "^2.4.1",
+    "sinon": "^15.1.0",
     "stylelint": "^13.12.0",
     "typescript": "^5.0.4",
     "uglify-es": "^3.3.9",
