--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/karma-mocha": "^1.3.1",
     "@types/mocha": "^10.0.1",
     "@types/sinon": "^10.0.15",
+    "@types/sinon-chai": "^3.2.9",
     "bower": "^1.8.12",
     "browser-sync": "^2.26.14",
     "browserslist": "^4.21.5",
@@ -94,10 +95,13 @@
     "npm-run-all": "^4.1.5",
     "polymer-cli": "^1.9.11",
     "polyserve": "^0.27.15",
+    "prettier": "^2.8.8",
     "puppeteer": "^20.5.0",
     "sinon": "^15.1.0",
+    "sinon-chai": "^3.7.0",
     "stylelint": "^13.12.0",
-    "typescript": "^5.0.4",
+    "type-fest": "^3.12.0",
+    "typescript": "^5.1.3",
     "uglify-es": "^3.3.9",
     "vite": "^4.3.9",
     "wct-istanbul": "^0.14.3",
