--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
   ],
   "dependencies": {
     "@vaadin/vaadin-usage-statistics": "^2.1.0",
-    "path-to-regexp": "^6.2.0"
+    "path-to-regexp": "^6.2.0",
+    "type-fest": "^3.12.0"
   },
   "devDependencies": {
     "@esm-bundle/chai": "^4.3.4-fix.0",
@@ -102,7 +103,6 @@
     "sinon": "^15.1.0",
     "sinon-chai": "^3.7.0",
     "stylelint": "^13.12.0",
-    "type-fest": "^3.12.0",
     "typescript": "^5.1.3",
     "uglify-es": "^3.3.9",
     "vite": "^4.3.9",
