--- a/package.json
+++ b/package.json
@@ -61,9 +61,10 @@
     "last 1 ChromeAndroid major versions"
   ],
   "dependencies": {
-    "@vaadin/vaadin-usage-statistics": "^2.1.0",
-    "path-to-regexp": "^6.2.0",
-    "type-fest": "^3.12.0"
+    "@vaadin/vaadin-usage-statistics": "^2.1.2",
+    "eslint-plugin-tsdoc": "^0.2.17",
+    "path-to-regexp": "^6.2.1",
+    "type-fest": "^3.13.0"
   },
   "devDependencies": {
     "@esm-bundle/chai": "^4.3.4-fix.0",
@@ -76,38 +77,39 @@
     "@types/mocha": "^10.0.1",
     "@types/sinon": "^10.0.15",
     "@types/sinon-chai": "^3.2.9",
-    "bower": "^1.8.12",
-    "browser-sync": "^2.26.14",
-    "browserslist": "^4.21.5",
+    "bower": "^1.8.14",
+    "browser-sync": "^2.29.3",
+    "browserslist": "^4.21.9",
     "bundlesize": "^0.18.1",
     "chai-as-promised": "^7.1.1",
     "chai-dom": "^1.11.0",
-    "eslint": "^7.22.0",
-    "eslint-plugin-html": "^6.1.2",
-    "fs-extra": "^9.1.0",
+    "eslint": "^8.44.0",
+    "eslint-plugin-html": "^7.1.0",
+    "fs-extra": "^11.1.1",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "gulp-git": "^2.10.1",
-    "gulp-replace": "^1.0.0",
+    "gulp-replace": "^1.1.4",
     "karma": "^6.4.2",
     "karma-chrome-launcher": "^3.2.0",
-    "karma-coverage": "^2.2.0",
+    "karma-coverage": "^2.2.1",
+    "karma-iframes": "^1.3.1",
     "karma-mocha": "^2.0.1",
+    "karma-parallel": "^0.3.1",
     "karma-vite": "^1.0.4",
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
     "polymer-cli": "^1.9.11",
     "polyserve": "^0.27.15",
-    "prettier": "^2.8.8",
-    "puppeteer": "^20.5.0",
-    "sinon": "^15.1.0",
+    "prettier": "^3.0.0",
+    "sinon": "^15.2.0",
     "sinon-chai": "^3.7.0",
-    "stylelint": "^13.12.0",
-    "typescript": "^5.1.3",
+    "stylelint": "^15.10.1",
+    "typescript": "^5.1.6",
     "uglify-es": "^3.3.9",
-    "vite": "^4.3.9",
+    "vite": "^4.4.2",
     "wct-istanbul": "^0.14.3",
     "web-component-tester": "^6.9.2",
-    "yargs": "^16.0.3"
+    "yargs": "^17.7.2"
   }
 }
