--- a/package.json
+++ b/package.json
@@ -84,7 +84,9 @@
     "chai-as-promised": "^7.1.1",
     "chai-dom": "^1.11.0",
     "eslint": "^8.44.0",
+    "eslint-config-vaadin": "^1.0.0-alpha.12",
     "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-perfectionist": "^1.4.0",
     "fs-extra": "^11.1.1",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
@@ -101,7 +103,7 @@
     "npm-run-all": "^4.1.5",
     "polymer-cli": "^1.9.11",
     "polyserve": "^0.27.15",
-    "prettier": "^3.0.0",
+    "prettier": "^2.8.8",
     "sinon": "^15.2.0",
     "sinon-chai": "^3.7.0",
     "stylelint": "^15.10.1",
