--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
     "last 1 ChromeAndroid major versions"
   ],
   "dependencies": {
+    "@ausginer/router": "file:../../opensource/router/ausginer-router-1.0.0-beta.0.tgz",
     "@vaadin/vaadin-usage-statistics": "^2.1.2",
-    "eslint-plugin-tsdoc": "^0.2.17",
     "path-to-regexp": "^6.2.1",
     "type-fest": "^3.13.0"
   },
@@ -84,9 +84,10 @@
     "chai-as-promised": "^7.1.1",
     "chai-dom": "^1.11.0",
     "eslint": "^8.44.0",
-    "eslint-config-vaadin": "^1.0.0-alpha.12",
+    "eslint-config-vaadin": "^1.0.0-alpha.18",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-perfectionist": "^1.4.0",
+    "eslint-plugin-tsdoc": "^0.2.17",
     "fs-extra": "^11.1.1",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
