refactor: update typings for the Router

--- a/package.json
+++ b/package.json
@@ -26,13 +26,12 @@
     "dist/vaadin-router.*"
   ],
   "scripts": {
+    "clean:build": "git clean -fx . -e .vite -e node_modules -e .idea -e .vscode",
     "install:dependencies": "bower install",
     "lint": "npm-run-all --parallel lint:*",
     "lint:js": "eslint --ext .html,.js src test demo *.js *.html",
     "lint:css": "stylelint demo/**/*.html",
-    "build": "tsc -p tsconfig.build.json && npm-run-all --parallel build:minify.*",
-    "build:minify.browser": "uglifyjs dist/vaadin-router.js -c -m --mangle-props regex=/^__/ --toplevel --source-map --output dist/vaadin-router.min.js",
-    "build:watch": "tsc -w",
+    "build": "tsx scripts/build.ts",
     "start": "vite",
     "test": "karma start karma.config.cjs",
     "test:watch": "npm run test -- --watch",
@@ -40,6 +39,7 @@
     "docs": "npm run build && echo \"not implemented\" >&2 && exit 1",
     "browserslist": "browserslist && browserslist --coverage",
     "prepare": "npm run build",
+    "typecheck": "tsc --noEmit",
     "version": "gulp -f gulpfile.cjs version:update"
   },
   "browserslist": [
@@ -62,6 +62,7 @@
     "@types/chai-as-promised": "^7.1.5",
     "@types/chai-dom": "^1.11.0",
     "@types/form-data": "^2.5.0",
+    "@types/glob": "^8.1.0",
     "@types/karma": "^6.3.4",
     "@types/karma-chrome-launcher": "^3.1.1",
     "@types/karma-mocha": "^1.3.1",
@@ -73,11 +74,13 @@
     "browserslist": "^4.21.9",
     "chai-as-promised": "^7.1.1",
     "chai-dom": "^1.11.0",
+    "esbuild": "^0.23.1",
     "eslint": "^8.44.0",
     "eslint-config-vaadin": "^1.0.0-alpha.12",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-perfectionist": "^1.4.0",
     "fs-extra": "^11.1.1",
+    "glob": "^11.0.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "gulp-git": "^2.10.1",
@@ -91,10 +94,11 @@
     "karma-vite": "^1.0.4",
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
+    "prettier": "^3.1.0",
     "sinon": "^15.2.0",
     "sinon-chai": "^3.7.0",
     "stylelint": "^15.10.1",
+    "tsx": "^4.19.1",
     "typescript": "^5.6.2",
     "uglify-es": "^3.3.9",
     "vite": "^4.4.2",
