test: fix karma setup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,17 @@
     "sort-keys": "off",
     "tsdoc/syntax": "error",
     "import/prefer-default-export": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": [ "vite.config.ts" ],
+      "rules": {
+        "import/no-extraneous-dependencies": [
+          "error", {
+            "devDependencies": true
+          }
+        ]
+      }
+    }
+  ]
 }
