--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "karma-mocha": "^2.0.1",
     "karma-parallel": "^0.3.1",
     "karma-vite": "^1.0.4",
+    "magic-string": "^0.30.11",
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.1.0",
@@ -101,7 +102,7 @@
     "tsx": "^4.19.1",
     "typescript": "^5.6.2",
     "uglify-es": "^3.3.9",
-    "vite": "^4.4.2",
+    "vite": "5.4.6",
     "yargs": "^17.7.2"
   }
 }
