--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - 'master'
+  pull_request:
+permissions:
+  contents: read
 
 jobs:
   test:
@@ -25,4 +28,3 @@ jobs:
         run: npm ci
       - name: Test
         run: npm test
-
