--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "karma-iframes": "^1.3.1",
     "karma-mocha": "^2.0.1",
     "karma-parallel": "^0.3.1",
+    "karma-spec-reporter": "^0.0.36",
     "karma-vite": "^1.0.4",
     "magic-string": "^0.30.11",
     "mocha": "^10.2.0",
