--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "declaration": true,
     "declarationMap": true,
@@ -8,7 +9,6 @@
     "moduleResolution": "bundler",
     "lib": ["es2022", "dom"],
     "allowArbitraryExtensions": true,
-    "skipLibCheck": true,
     "strict": true,
     "strictBindCallApply": true,
     "sourceMap": true,
@@ -19,6 +19,6 @@
     "useDefineForClassFields": true,
     "useUnknownInCatchVariables": true
   },
-  "include": ["scripts", "src", "test", "./vite.config.ts", "./*.cjs"],
+  "include": ["scripts", "src/**/*", "test/**/*", "./vite.config.ts", "./*.cjs"],
   "exclude": ["scripts/**/*.js"]
 }
