--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint": "^8.57.0",
     "eslint-config-vaadin": "^1.0.0-alpha.12",
     "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-oxlint": "^0.9.9",
     "eslint-plugin-perfectionist": "^1.4.0",
     "fs-extra": "^11.1.1",
     "glob": "^11.0.0",
@@ -96,6 +97,7 @@
     "magic-string": "^0.30.11",
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
+    "oxlint": "^0.9.9",
     "prettier": "^3.1.0",
     "sinon": "^15.2.0",
     "sinon-chai": "^3.7.0",
