--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "target": "es2022",
     "module": "esnext",
     "moduleResolution": "bundler",
-    "lib": ["es2022", "dom"],
+    "lib": ["es2022", "dom", "DOM.Iterable"],
     "allowArbitraryExtensions": true,
     "strict": true,
     "strictBindCallApply": true,
