--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
     "allowSyntheticDefaultImports": true,
     "declaration": true,
     "declarationMap": true,
-    "target": "es2022",
+    "target": "esnext",
     "module": "esnext",
     "moduleResolution": "bundler",
-    "lib": ["es2022", "dom", "DOM.Iterable"],
+    "lib": ["esnext", "dom", "DOM.Iterable"],
     "allowArbitraryExtensions": true,
     "strict": true,
     "strictBindCallApply": true,
