--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "last 1 ChromeAndroid major versions"
   ],
   "dependencies": {
+    "@ausginer/router": "^1.0.0-beta.3",
     "@vaadin/vaadin-usage-statistics": "^2.1.2",
     "eslint-plugin-tsdoc": "^0.2.17",
     "path-to-regexp": "^6.2.1",
