--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@vaadin/router",
   "version": "1.7.2",
   "description": "Small and powerful client-side router for Web Components. Framework-agnostic.",
-  "main": "dist/vaadin-router.js",
-  "module": "dist/vaadin-router.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "type": "module",
   "repository": "vaadin/vaadin-router",
   "keywords": [
@@ -20,10 +20,8 @@
   },
   "homepage": "https://vaadin.com",
   "files": [
-    "vaadin-router.js",
-    "interfaces.d.ts",
     "src",
-    "dist/vaadin-router.*"
+    "dist"
   ],
   "scripts": {
     "clean:build": "git clean -fx . -e .vite -e node_modules -e .idea -e .vscode",
@@ -38,9 +36,9 @@
     "test:coverage": "npm run test -- --coverage",
     "docs": "npm run build && echo \"not implemented\" >&2 && exit 1",
     "browserslist": "browserslist && browserslist --coverage",
+    "prepack": "npm run clean:build",
     "prepare": "npm run build",
-    "typecheck": "tsc --noEmit",
-    "version": "gulp -f gulpfile.cjs version:update"
+    "typecheck": "tsc --noEmit"
   },
   "browserslist": [
     "last 1 Chrome major versions",
@@ -53,61 +51,55 @@
   ],
   "dependencies": {
     "@vaadin/vaadin-usage-statistics": "^2.1.2",
-    "eslint-plugin-tsdoc": "^0.2.17",
-    "path-to-regexp": "^6.2.1",
-    "type-fest": "^3.13.0"
+    "path-to-regexp": "^6.3.0",
+    "type-fest": "^4.26.1"
   },
   "devDependencies": {
     "@esm-bundle/chai": "^4.3.4-fix.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/user-event": "^14.5.2",
-    "@types/chai-as-promised": "^7.1.5",
+    "@types/chai-as-promised": "^8.0.1",
     "@types/chai-dom": "^1.11.0",
-    "@types/form-data": "^2.5.0",
     "@types/glob": "^8.1.0",
-    "@types/karma": "^6.3.4",
+    "@types/karma": "^6.3.8",
     "@types/karma-chrome-launcher": "^3.1.1",
     "@types/karma-mocha": "^1.3.1",
     "@types/mocha": "^10.0.1",
-    "@types/sinon": "^10.0.15",
-    "@types/sinon-chai": "^3.2.9",
+    "@types/sinon": "^17.0.3",
+    "@types/sinon-chai": "^4.0.0",
     "bower": "^1.8.14",
-    "browser-sync": "^2.29.3",
-    "browserslist": "^4.21.9",
-    "chai-as-promised": "^7.1.1",
+    "browserslist": "^4.24.0",
+    "chai-as-promised": "^8.0.0",
     "chai-dom": "^1.11.0",
-    "esbuild": "^0.23.1",
-    "eslint": "^8.57.0",
-    "eslint-config-vaadin": "^1.0.0-alpha.12",
-    "eslint-plugin-html": "^7.1.0",
+    "esbuild": "^0.24.0",
+    "eslint": "^8.57.1",
+    "eslint-config-vaadin": "^1.0.0-alpha.28",
+    "eslint-plugin-html": "^8.1.2",
     "eslint-plugin-oxlint": "^0.9.9",
-    "eslint-plugin-perfectionist": "^1.4.0",
+    "eslint-plugin-perfectionist": "^3.8.0",
+    "eslint-plugin-tsdoc": "^0.3.0",
     "fs-extra": "^11.1.1",
     "glob": "^11.0.0",
-    "gulp": "^4.0.2",
-    "gulp-cli": "^2.3.0",
-    "gulp-git": "^2.10.1",
-    "gulp-replace": "^1.1.4",
-    "karma": "^6.4.2",
+    "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
     "karma-iframes": "^1.3.1",
     "karma-mocha": "^2.0.1",
     "karma-parallel": "^0.3.1",
     "karma-spec-reporter": "^0.0.36",
-    "karma-vite": "^1.0.4",
+    "karma-vite": "^1.0.5",
     "magic-string": "^0.30.11",
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
     "oxlint": "^0.9.9",
     "prettier": "^3.1.0",
-    "sinon": "^15.2.0",
-    "sinon-chai": "^3.7.0",
-    "stylelint": "^15.10.1",
+    "sinon": "^19.0.2",
+    "sinon-chai": "^4.0.0",
+    "stylelint": "^16.9.0",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2",
-    "uglify-es": "^3.3.9",
-    "vite": "5.4.6",
+    "typescript-eslint": "^8.8.1",
+    "vite": "5.4.8",
     "yargs": "^17.7.2"
   }
 }
