build: add TypeScript declaration files

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "lint": "npm-run-all --parallel lint:*",
     "lint:js": "eslint --ext .html,.js src test demo *.js *.html",
     "lint:css": "stylelint demo/**/*.html",
-    "build": "tsx scripts/build.ts",
+    "build": "npm-run-all --parallel build:*",
+    "build:esbuild": "tsx scripts/build.ts",
+    "build:tsc": "tsc --emitDeclarationOnly --isolatedModules -p tsconfig.build.json",
     "start": "vite",
     "test": "karma start karma.config.cjs",
     "test:watch": "npm run test -- --watch",
