--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   },
   "plugins": ["tsdoc"],
   "rules": {
+    "@typescript-eslint/no-restricted-types": "off",
     "@typescript-eslint/no-invalid-void-type": "off",
     "@typescript-eslint/no-useless-template-literals": "off",
     "import/no-unassigned-import": "off",
