--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "useDefineForClassFields": true,
     "useUnknownInCatchVariables": true
   },
-  "include": ["scripts", "src/**/*", "test/**/*", "./vite.config.ts", "./*.cjs"],
-  "exclude": ["scripts/**/*.js"]
+  "include": ["scripts/**/*", "src/**/*", "test/**/*", "./vite.config.ts", "./*.cjs"],
+  "exclude": ["dist/**/*", "scripts/**/*.js"]
 }
