--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "useUnknownInCatchVariables": true
   },
   "include": ["scripts/**/*", "src/**/*", "test/**/*", "./vite.config.ts", "./*.cjs"],
-  "exclude": ["dist/**/*", "scripts/**/*.js"]
+  "exclude": ["node_modules", "dist/**/*", "scripts/**/*.js"]
 }
