docs: add documentation system and more docs (#890)
* chore: add typedoc to build documentation

* docs: add more docs

* chore: add docs workflow

* refactor: small improvements

* refactor: improve typings system

* refactor: small types simplification

* build: re-enable skipLibCheck in tsconfig.json

---------

Co-authored-by: Anton Platonov <platosha@gmail.com>

--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "build": "npm-run-all --parallel build:*",
     "build:esbuild": "tsx scripts/build.ts",
     "build:copy-dts": "tsx scripts/copy-dts.ts",
-    "build:tsc": "tsc --emitDeclarationOnly --isolatedModules -p tsconfig.build.json",
+    "build:tsc": "tsc --emitDeclarationOnly -p tsconfig.build.json",
     "start": "vite",
     "test": "karma start karma.config.cjs",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "npm run test -- --coverage",
-    "docs": "npm run build && echo \"not implemented\" >&2 && exit 1",
+    "docs": "typedoc",
     "browserslist": "browserslist && browserslist --coverage",
     "prepack": "npm run clean:build",
     "prepare": "npm run build",
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "@esm-bundle/chai": "^4.3.4-fix.0",
+    "@mxssfd/typedoc-theme": "^1.1.7",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/chai-as-promised": "^8.0.1",
@@ -99,6 +100,8 @@
     "sinon-chai": "^4.0.0",
     "stylelint": "^16.9.0",
     "tsx": "^4.19.1",
+    "typedoc": "^0.26.8",
+    "typedoc-plugin-missing-exports": "^3.0.0",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.1",
     "vite": "5.4.8",
