--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@ausginer/router": "file:../../opensource/router/ausginer-router-1.0.0-beta.3.tgz",
     "@vaadin/vaadin-usage-statistics": "^2.1.2",
     "eslint-plugin-tsdoc": "^0.2.17",
+    "itertools": "^2.3.2",
     "path-to-regexp": "^6.2.1",
     "type-fest": "^3.13.0",
     "urlpattern-polyfill": "^10.0.0"
