--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,15 +4,12 @@
     "vaadin/imports-typescript",
     "vaadin/prettier",
     "vaadin/testing",
-    "plugin:oxlint/recommended",
-    "plugin:storybook/recommended"
+    "plugin:oxlint/recommended"
   ],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-  "plugins": [
-    "tsdoc"
-  ],
+  "plugins": ["tsdoc"],
   "rules": {
     "@typescript-eslint/no-restricted-types": "off",
     "@typescript-eslint/no-invalid-void-type": "off",
@@ -23,7 +20,5 @@
     "tsdoc/syntax": "error",
     "import/prefer-default-export": "off"
   },
-  "ignorePatterns": [
-    "*.cjs"
-  ]
+  "ignorePatterns": ["*.cjs"]
 }
