--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
     "browserslist": "browserslist && browserslist --coverage",
     "prepack": "npm run clean:build",
     "prepare": "npm run build",
-    "typecheck": "tsc --noEmit",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "typecheck": "tsc --noEmit"
   },
   "browserslist": [
     "last 1 Chrome major versions",
@@ -59,15 +57,8 @@
     "type-fest": "^4.26.1"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.9.0",
     "@esm-bundle/chai": "^4.3.4-fix.0",
     "@mxssfd/typedoc-theme": "^1.1.7",
-    "@storybook/addon-essentials": "^8.3.5",
-    "@storybook/addon-links": "^8.3.5",
-    "@storybook/blocks": "^8.3.5",
-    "@storybook/test": "^8.3.5",
-    "@storybook/web-components": "^8.3.5",
-    "@storybook/web-components-vite": "^8.3.5",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/chai-as-promised": "^8.0.1",
@@ -89,7 +80,6 @@
     "eslint-plugin-html": "^8.1.2",
     "eslint-plugin-oxlint": "^0.9.9",
     "eslint-plugin-perfectionist": "^3.8.0",
-    "eslint-plugin-storybook": "^0.9.0",
     "eslint-plugin-tsdoc": "^0.3.0",
     "fs-extra": "^11.1.1",
     "glob": "^11.0.0",
@@ -101,7 +91,6 @@
     "karma-parallel": "^0.3.1",
     "karma-spec-reporter": "^0.0.36",
     "karma-vite": "^1.0.5",
-    "lit": "^3.2.1",
     "magic-string": "^0.30.11",
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
@@ -109,7 +98,6 @@
     "prettier": "^3.1.0",
     "sinon": "^19.0.2",
     "sinon-chai": "^4.0.0",
-    "storybook": "^8.3.5",
     "stylelint": "^16.9.0",
     "tsx": "^4.19.1",
     "typedoc": "^0.26.8",
