--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "browserslist": "browserslist && browserslist --coverage",
     "prepack": "npm run clean:build",
     "prepare": "npm run build",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "demo:dev": "cd __demo && vite dev"
   },
   "browserslist": [
     "last 1 Chrome major versions",
@@ -58,7 +59,9 @@
   },
   "devDependencies": {
     "@esm-bundle/chai": "^4.3.4-fix.0",
+    "@lit-labs/preact-signals": "^1.0.2",
     "@mxssfd/typedoc-theme": "^1.1.7",
+    "@preact/signals-core": "^1.8.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/chai-as-promised": "^8.0.1",
@@ -70,10 +73,23 @@
     "@types/mocha": "^10.0.1",
     "@types/sinon": "^17.0.3",
     "@types/sinon-chai": "^4.0.0",
+    "@vaadin/accordion": "^24.5.1",
+    "@vaadin/app-layout": "^24.5.0",
+    "@vaadin/button": "^24.5.0",
+    "@vaadin/icon": "^24.5.0",
+    "@vaadin/icons": "^24.5.0",
+    "@vaadin/scroller": "^24.5.0",
+    "@vaadin/side-nav": "^24.5.0",
+    "@vaadin/tabs": "^24.5.1",
+    "@vaadin/tabsheet": "^24.5.1",
+    "@vaadin/text-field": "^24.5.0",
+    "@vaadin/tooltip": "^24.5.0",
+    "@vaadin/vaadin-lumo-styles": "^24.5.0",
     "bower": "^1.8.14",
     "browserslist": "^4.24.0",
     "chai-as-promised": "^8.0.0",
     "chai-dom": "^1.11.0",
+    "cssnano": "^7.0.6",
     "esbuild": "^0.24.0",
     "eslint": "^8.57.1",
     "eslint-config-vaadin": "^1.0.0-alpha.28",
@@ -83,6 +99,7 @@
     "eslint-plugin-tsdoc": "^0.3.0",
     "fs-extra": "^11.1.1",
     "glob": "^11.0.0",
+    "highlight.js": "^11.10.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
@@ -91,10 +108,11 @@
     "karma-parallel": "^0.3.1",
     "karma-spec-reporter": "^0.0.36",
     "karma-vite": "^1.0.5",
+    "lit": "^3.2.1",
     "magic-string": "^0.30.11",
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
-    "oxlint": "^0.9.9",
+    "postcss": "^8.4.47",
     "prettier": "^3.1.0",
     "sinon": "^19.0.2",
     "sinon-chai": "^4.0.0",
