--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
     "allowSyntheticDefaultImports": true,
     "declaration": true,
     "declarationMap": true,
-    "target": "es2022",
+    "target": "esnext",
     "module": "esnext",
     "moduleResolution": "bundler",
-    "lib": ["es2022", "dom", "DOM.Iterable"],
+    "lib": ["esnext", "dom", "DOM.Iterable"],
     "allowArbitraryExtensions": true,
     "skipLibCheck": true,
     "strict": true,
@@ -20,6 +20,6 @@
     "useDefineForClassFields": true,
     "useUnknownInCatchVariables": true
   },
-  "include": ["scripts/**/*", "src/**/*", "test/**/*", "/vite.config.ts", "/*.cjs"],
+  "include": ["scripts/**/*", "src/**/*", "test/**/*", "__demo/**/*", "vite.config.ts", "/*.cjs"],
   "exclude": ["node_modules", "dist/**/*", "scripts/**/*.js"]
 }
