refactor: implement multipage

--- a/__demo/tsconfig.json
+++ b/__demo/tsconfig.json
@@ -1,10 +1,9 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": ["../tsconfig.json"],
   "compilerOptions": {
     "paths": {
       "@helpers/*": ["./helpers/*"]
     }
   },
-  "include": ["**/*", "*"],
-  "exclude": []
+  "include": ["./**/*", "./*"]
 }
