docs: add more pages

--- a/__demo/tsconfig.json
+++ b/__demo/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": ["../tsconfig.json"],
   "compilerOptions": {
     "paths": {
-      "@helpers/*": ["./helpers/*"]
+      "@helpers/*": ["./helpers/*"],
+      "@vaadin/router": ["../src/index.ts"]
     }
   },
   "include": ["./**/*", "./*"]
