--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
     "prettier": "^3.1.0",
+    "regexp.escape": "^2.0.1",
     "sinon": "^19.0.2",
     "sinon-chai": "^4.0.0",
     "stylelint": "^16.9.0",
