chore: use concurrently instead of abandoned npm-run-all

--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   "scripts": {
     "clean:build": "git clean -fx . -e .vite -e node_modules -e .idea -e .vscode",
     "install:dependencies": "bower install",
-    "lint": "npm-run-all --parallel lint:*",
+    "lint": "concurrently npm:lint:*",
     "lint:js": "eslint --ext .html,.js src test demo *.js *.html",
     "lint:css": "stylelint demo/**/*.html",
-    "build": "npm-run-all --parallel build:*",
+    "build": "concurrently npm:build:*",
     "build:esbuild": "tsx scripts/build.ts",
     "build:copy-dts": "tsx scripts/copy-dts.ts",
     "build:tsc": "tsc --emitDeclarationOnly -p tsconfig.build.json",
@@ -74,6 +74,7 @@
     "browserslist": "^4.24.0",
     "chai-as-promised": "^8.0.0",
     "chai-dom": "^1.11.0",
+    "concurrently": "^9.0.1",
     "esbuild": "^0.24.0",
     "eslint": "^8.57.1",
     "eslint-config-vaadin": "^1.0.0-alpha.28",
@@ -93,7 +94,6 @@
     "karma-vite": "^1.0.5",
     "magic-string": "^0.30.11",
     "mocha": "^10.2.0",
-    "npm-run-all": "^4.1.5",
     "oxlint": "^0.9.9",
     "prettier": "^3.1.0",
     "sinon": "^19.0.2",
