--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/karma-chrome-launcher": "^3.1.1",
     "@types/karma-mocha": "^1.3.1",
     "@types/mocha": "^10.0.1",
+    "@types/postcss-import": "^14.0.3",
     "@types/sinon": "^17.0.3",
     "@types/sinon-chai": "^4.0.0",
     "@vaadin/accordion": "^24.5.1",
@@ -111,6 +112,8 @@
     "magic-string": "^0.30.11",
     "mocha": "^10.2.0",
     "postcss": "^8.4.47",
+    "postcss-import": "^16.1.0",
+    "postcss-nested-import": "^1.3.0",
     "prettier": "^3.1.0",
     "regexp.escape": "^2.0.1",
     "sinon": "^19.0.2",
