--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "lit": "^3.2.1",
     "magic-string": "^0.30.11",
     "mocha": "^10.2.0",
+    "node-html-parser": "^6.1.13",
     "postcss": "^8.4.47",
     "postcss-import": "^16.1.0",
     "postcss-nested-import": "^1.3.0",
