--- a/__demo/.eslintrc.json
+++ b/__demo/.eslintrc.json
@@ -5,6 +5,6 @@
     "project": "./tsconfig.json"
   },
   "rules": {
-    "no-unbound-method": "off"
+    "@typescript-eslint/unbound-method": "off"
   }
 }
