fix: use es2021 as a target for TypeScript (#900)
* fix: use es2021 as a target for TypeScript

* fix: get rid of es2022 code

* fix: restore error.cause

---------

Co-authored-by: Anton Platonov <platosha@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
     "allowSyntheticDefaultImports": true,
     "declaration": true,
     "declarationMap": true,
-    "target": "esnext",
+    "target": "es2021",
     "module": "esnext",
     "moduleResolution": "bundler",
-    "lib": ["esnext", "dom", "DOM.Iterable"],
+    "lib": ["es2021", "dom", "DOM.Iterable"],
     "allowArbitraryExtensions": true,
     "skipLibCheck": true,
     "strict": true,
