--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "noImplicitOverride": true,
     "noImplicitAny": true,
     "useDefineForClassFields": true,
-    "useUnknownInCatchVariables": true
+    "useUnknownInCatchVariables": true,
+    "importHelpers": true
   },
   "include": ["scripts/**/*", "src/**/*", "test/**/*", "vite.config.ts", "/*.cjs"]
 }
