--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@vaadin/accordion": "^24.5.1",
     "@vaadin/app-layout": "^24.5.0",
     "@vaadin/button": "^24.5.0",
+    "@vaadin/dialog": "^24.5.3",
     "@vaadin/icon": "^24.5.0",
     "@vaadin/icons": "^24.5.0",
     "@vaadin/scroller": "^24.5.0",
